--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ var x = setInterval(function() {
             <div class="container">
                 <h1 class="gradient-text">Code Connect 2021</h1>
                 <p>
-                    This page does not exist. Please use the navigation to get to a working page. If you got here due to an error on our part,
-                    <a class="underline" href="">please let us know.</a>
+                    Join us at our 2021 #CodeConnect for 2 days of learning, coding and connecting with the VMware {code} community in 100% live sessions!
+                   
                 </p>
                 <br>
                 <a class="button">
