--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@ var x = setInterval(function() {
             <nav>
                 <li class="active"><a href="">Schedule</a></li>
                 <li><a href="https://gabrieladarza.github.io/CodeConnect2021-trial-2/speakers/">Speakers</a></li>
-                <li><a href="">Experience</a></li>
                 <li><a href="">Sponsors</a></li>
                 <li><a href="">FAQ</a></li>
-                <li><a href="">Join</a></li>
+                <li><a href="https://code.vmware.com/join">Join</a></li>
             </nav>
         </header>
         <section class="content">
