--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ var x = setInterval(function() {
                    
                 </p>
                 <br>
-                <a class="button">
+                <a href="https://forms.gle/92gBcfRBuCfX7oFv7" class="button">
                     REGISTER
                 </a>
             </div>
