--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ var x = setInterval(function() {
                 We’re adding more speakers every day!<br>Sign up for updates to stay in the loop.    
             </p>
             <br>
-            <a href="#subscribe" class="button" target="_blank">
-                <span>Subscribe for updates</span>
+            <a href="https://code.vmware.com/join" class="button" target="_blank">
+                <span>Join for updates</span>
             </a>
         </section>
         <hr class="gradient">
