--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ var x = setInterval(function() {
         <!-- <hr> -->
         <section class="subscribe">
             <p>
-                We’re adding more speakers every day!<br>Sign up for updates to stay in the loop.    
+                Join VMware {code} for updates to stay in the loop with our community.    
             </p>
             <br>
             <a href="https://code.vmware.com/join" class="button" target="_blank">
