--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@ var x = setInterval(function() {
         <hr>
         <hr class="gradient">
         <section class="speakers">
-            <h1>Speakers</h1>
+            <h1>Meet our Team!</h1>
             <ul class="speaker-list">
                 <li>
-                    <img alt="Nicole Forsgren" src="image/Nat_Friedman_Headshot.jpg">
+                    <img alt="Gabi Darza" src="image/Nat_Friedman_Headshot.jpg">
                     <h3>Getting better together: What enterprise can learn from global patterns</h3>
-                    <h4>Nicole Forsgren</h4>
-                    <h5>VP Research & Strategy, GitHub</h5>
+                    <h4>Gabi Darza</h4>
+                    <h5>Community Manager, VMware</h5>
                 </li>
                 <li>
-                    <img alt="Angie Jones" src="image/Nicole_Forsgren_Headshot.jpg">
+                    <img alt="Kripa Sitaraman" src="image/Nicole_Forsgren_Headshot.jpg">
                     <h3>Visual tests on every pull request</h3>
-                    <h4>Angie Jones</h4>
-                    <h5>Principal Developer Advocate, Applitools</h5>
+                    <h4>Kripa Sitaraman</h4>
+                    <h5>Community Manager, VMware</h5>
                 </li>
                 <li>
-                    <img alt="Hung Brown Ton" src="image/Angie_Jones_Headshot.jpg">
+                    <img alt="Eric Nielsen" src="image/Angie_Jones_Headshot.jpg">
                     <h3>From scientific poster sessions to GitHub global actions: transforming a century plus company to the digital age</h3>
-                    <h4>Hung Brown Ton</h4>
-                    <h5>Chief Architect, 3M Company</h5>
+                    <h4>Eric Nielsen</h4>
+                    <h5>Senior Director, Social Meda and Communities</h5>
                 </li>
             </ul>
         </section>
