--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@ var x = setInterval(function() {
             <h1>Meet our Team!</h1>
             <ul class="speaker-list">
                 <li>
-                    <img alt="Gabi Darza" src="image/Nat_Friedman_Headshot.jpg">
+                    <img alt="Gabi Darza" src="image/gabi.jpeg">
                     <h3>Getting better together: What enterprise can learn from global patterns</h3>
                     <h4>Gabi Darza</h4>
                     <h5>Community Manager, VMware</h5>
                 </li>
                 <li>
-                    <img alt="Kripa Sitaraman" src="image/Nicole_Forsgren_Headshot.jpg">
+                    <img alt="Kripa Sitaraman" src="image/Kripa_Sitaraman.jpg">
                     <h3>Visual tests on every pull request</h3>
                     <h4>Kripa Sitaraman</h4>
                     <h5>Community Manager, VMware</h5>
                 </li>
                 <li>
-                    <img alt="Eric Nielsen" src="image/Angie_Jones_Headshot.jpg">
+                    <img alt="Eric Nielsen" src="image/ericnielsen.jpeg">
                     <h3>From scientific poster sessions to GitHub global actions: transforming a century plus company to the digital age</h3>
                     <h4>Eric Nielsen</h4>
                     <h5>Senior Director, Social Meda and Communities</h5>
