--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ var x = setInterval(function() {
             <h1>Meet our Team!</h1>
             <ul class="speaker-list">
                 <li>
-                    <img alt="Gabi Darza" src="image/gabi.jpeg">
+                    <img alt="Gabi Darza" src="image/Gabi.jpg">
                     <h3>"The best is yet to come"</h3>
                     <h4>Gabi Darza</h4>
                     <h5>Community Manager, VMware</h5>
                 </li>
                 <li>
-                    <img alt="Kripa Sitaraman" src="image/Kripa_Sitaraman.jpg">
+                    <img alt="Kripa Sitaraman" src="image/Kripa.jpg">
                     <h3>"This year- bigger and better than the last. Looking forward to connecting with everyone"</h3>
                     <h4>Kripa Sitaraman</h4>
                     <h5>Community Manager, VMware</h5>
@@ -104,7 +104,7 @@ var x = setInterval(function() {
             <h2>Why attend?</h2>
 
             <h4 class="text-gradient-purple">Learn from the best</h4>
-            <p>Three channels of content dedicated to developers, enterprise teams, and college students.</p>
+            <p>Live sessions from Subject Matter Experts in their fields, with two tracks to customize your experience.</p>
 
             <h4 class="text-gradient-purple">Get the latest</h4>
             <p>New product announcements and deep dives.</p>
