--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@ var x = setInterval(function() {
             <h1>Meet our Team!</h1>
             <ul class="speaker-list">
                 <li>
-                    <img alt="Gabi Darza" src="image/Gabi.jpg">
+                    <img alt="Gabi Darza" src="image/gabi.png">
                     <h3>"The best is yet to come"</h3>
                     <h4>Gabi Darza</h4>
                     <h5>Community Manager, VMware</h5>
                 </li>
                 <li>
-                    <img alt="Kripa Sitaraman" src="image/Kripa.jpg">
+                    <img alt="Kripa Sitaraman" src="image/kripa.png">
                     <h3>"This year- bigger and better than the last. Looking forward to connecting with everyone"</h3>
                     <h4>Kripa Sitaraman</h4>
                     <h5>Community Manager, VMware</h5>
