--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@ var x = setInterval(function() {
             <h2>Why attend?</h2>
 
             <h4 class="text-gradient-purple">Learn from the best</h4>
-            <p>Live sessions from Subject Matter Experts in their fields, with two tracks to customize your experience.</p>
+            <p>Two tracks, two day, dozens of live sessions from Subject Matter Experts in their fields</p>
 
-            <h4 class="text-gradient-purple">Get the latest</h4>
-            <p>New product announcements and deep dives.</p>
+            <h4 class="text-gradient-purple">Coding, customized</h4>
+            <p>Choose sessions in two live tracks and customize your learning.</p>
 
             <h4 class="text-gradient-purple">Connect beyond content</h4>
-            <p>Networking and learning opportunities, from Workshops to mentoring sessions.</p>
+            <p>Networking and learning opportunities, get to know the VMware{code} community</p>
 
             <h4 class="text-gradient-purple">Have fun along the way</h4>
-            <p>Musical performances inspired by code and a few more surprises to come!</p>
+            <p>Coding is meant to be fun! Don't take yourself too seriously, grab a beer, and come ready to learn</p>
         </section>
         <hr class="gradient">
         <!-- <hr> -->
