--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ var x = setInterval(function() {
             <h2>Why attend?</h2>
 
             <h4 class="text-gradient-purple">Learn from the best</h4>
-            <p>Two tracks, two day, dozens of live sessions from Subject Matter Experts in their fields</p>
+            <p>Two tracks, two days, dozens of live sessions from subject matter experts in their fields</p>
 
             <h4 class="text-gradient-purple">Coding, customized</h4>
             <p>Choose sessions in two live tracks and customize your learning.</p>
