--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@ var x = setInterval(function() {
         </section>
         <footer>
             <a href="">
-                <img class="logo" src="asset/GitHub-invertocat.svg">
+                <img class="logo" src="asset/vmw-code-logo_wht.png">
             </a>
-            <p class="copyright">© 2020 GitHub. All rights reserved.</p>
+            <p class="copyright">© 2021 VMware {code}. All rights reserved.</p>
         </footer>
     </body>
 </html>
