--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ var x = setInterval(function() {
         </section>
         <footer>
             <a href="">
-                <img class="logo" src="asset/vmw-code-logo_wht.png">
+                <img class="logo" src="asset/logowhite.png">
             </a>
             <p class="copyright">© 2021 VMware {code}. All rights reserved.</p>
         </footer>
