--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@ var x = setInterval(function() {
                 <h4>Thank you to our sponsors</h4>
                 <ul class="sponsor-list">
                     <li>
-                        <a href="/sponsors/veracode/" data-ga-click="Home, click, cta_text: open Veracode page">
-                        <img src="https://githubuniverse.com/assets/img/sponsors/logo-veracode.svg" alt="Veracode">
+                        <a href="/sponsors/controlup/" data-ga-click="Home, click, cta_text: open controlup page">
+                        <img src="assets/Control-Up.jpg" alt="controlup">
                         </a>
                     </li>
                     <li>
-                        <a href="/sponsors/bridgecrew/" data-ga-click="Home, click, cta_text: open Bridgecrew page">
-                        <img src="https://githubuniverse.com/assets/img/sponsors/Bridgecrew.svg" alt="Bridgecrew">
+                        <a href="/sponsors/github/" data-ga-click="Home, click, cta_text: open github page">
+                        <img src="assets/GitHub.jpg" alt="github">
                         </a>
                     </li>
                     <li>
