--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@ var x = setInterval(function() {
                 <ul class="sponsor-list">
                     <li>
                         <a href="/sponsors/controlup/" data-ga-click="Home, click, cta_text: open controlup page">
-                        <img src="assets/Control-Up.jpg" alt="controlup">
+                        <img src="asset/Control-Up.jpg" alt="controlup">
                         </a>
                     </li>
                     <li>
                         <a href="/sponsors/github/" data-ga-click="Home, click, cta_text: open github page">
-                        <img src="assets/GitHub.jpg" alt="github">
+                        <img src="asset/GitHub.jpg" alt="github">
                         </a>
                     </li>
                     <li>
