--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@ var x = setInterval(function() {
                 <ul class="sponsor-list">
                     <li>
                         <a href="/sponsors/controlup/" data-ga-click="Home, click, cta_text: open controlup page">
-                        <img src="asset/Control-Up.jpg" alt="controlup">
+                        <img src="asset/logo_controlup.png" alt="controlup">
                         </a>
                     </li>
                     <li>
                         <a href="/sponsors/github/" data-ga-click="Home, click, cta_text: open github page">
-                        <img src="asset/GitHub.jpg" alt="github">
+                        <img src="asset/logo_github.png" alt="github">
                         </a>
                     </li>
                     <li>
-                        <a href="/sponsors/whitesource/" data-ga-click="Home, click, cta_text: open WhiteSource page">
-                        <img src="https://githubuniverse.com/assets/img/sponsors/Whitesource.svg" alt="WhiteSource">
+                        <a href="/sponsors/ibm/" data-ga-click="Home, click, cta_text: open ibm page">
+                        <img src="assest/logo_ibm.png" alt="ibm">
                         </a>
                     </li>
                     <li>
