--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@ var x = setInterval(function() {
                     </li>
                     <li>
                         <a href="/sponsors/ibm/" data-ga-click="Home, click, cta_text: open ibm page">
-                        <img src="assest/logo_ibm.png" alt="ibm">
+                        <img src="asset/logo_ibm.png" alt="ibm">
                         </a>
                     </li>
                     <li>
-                        <a href="/sponsors/ponicode/" data-ga-click="Home, click, cta_text: open Ponicode page">
-                        <img src="https://githubuniverse.com/assets/img/sponsors/ponicode.svg" alt="Ponicode">
+                        <a href="/sponsors/womenwhocode/" data-ga-click="Home, click, cta_text: open womenwhocode page">
+                        <img src="asset/logo_womenwhocode.png" alt="womenwhocode">
                         </a>
                     </li>
                 </ul>
