--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@ var x = setInterval(function() {
             </ul>
         </section>
         <footer>
+            <li>
+<a href="https://bit.ly/3o9lkUB">Code of Conduct</a>
+</li>
             <a href="">
                 <img class="logo" src="asset/logowhite.png">
             </a>
