--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@ var x = setInterval(function() {
                         <img src="asset/logo_womenwhocode.png" alt="womenwhocode">
                         </a>
                     </li>
+                      <li>
+                        <a href="/sponsors/zoom/" data-ga-click="Home, click, cta_text: open zoom page">
+                        <img src="asset/logo_zoom.png" alt="zoom">
+                        </a>
+                    </li>
                 </ul>
                
             <ul class="linear-list">
