--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ var x = setInterval(function() {
                 <li><a href="">Sponsors</a></li>
                 <li><a href="">FAQ</a></li>
                 <li><a href="https://code.vmware.com/join">Join</a></li>
+                <li><a href="">Hackathon</a></li>
             </nav>
         </header>
         <section class="content">
