--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ var x = setInterval(function() {
             <nav>
                 <li class="active"><a href="">Schedule</a></li>
                 <li><a href="https://gabrieladarza.github.io/CodeConnect2021-trial-2/speakers/">Speakers</a></li>
-                <li><a href="">Sponsors</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/sponsors">Sponsors</a></li>
                 <li><a href="">FAQ</a></li>
                 <li><a href="https://code.vmware.com/join">Join</a></li>
                 <li><a href="">Hackathon</a></li>
