--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ var x = setInterval(function() {
                 <li class="active"><a href="">Schedule</a></li>
                 <li><a href="https://gabrieladarza.github.io/CodeConnect2021-trial-2/speakers/">Speakers</a></li>
                 <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/sponsors">Sponsors</a></li>
-                <li><a href="">FAQ</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/faqs">FAQ</a></li>
                 <li><a href="https://code.vmware.com/join">Join</a></li>
-                <li><a href="">Hackathon</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/hackathon">Hackathon</a></li>
             </nav>
         </header>
         <section class="content">
