--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,2 +1,105 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+* {
+    padding: 0;
+    margin: 0;
+}
+*, *:before, *:after {
+    box-sizing: border-box;
+}
+body {
+    background: #000;
+    color: white;
+    font-family: "Open Sans";
+}
+header {
+    display: inline-block;
+    width: 100%;
+    height: 100px;
+    background: #040303;
+    border-bottom: 1px solid rgba(66,82,109,0.5);
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+header nav {
+    float: right;
+    margin-right: 30px;
+}
+header nav li {
+    display: inline-block;
+    margin-left: 9px;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+header nav li.active {
+    border-bottom: 2px solid #d73a49;
+    /* border-bottom: 2px solid #FFE57F;  */
+}
 
-Sponsor list
+<!--This is where the html begins -->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="asset/style.css">
+    </head>
+    <body>
+        <header>
+            <img class="logo" src="asset/vmw-code-logo_wht.png">
+            <div class="time">October 5-6, 2021</div>
+            <div class="countdown-time">
+                <span id="d">22</span>
+                d
+                ::
+                <span id="h">1</span>
+                h
+                ::
+                <span id="m">48</span>
+                m
+                ::
+                <span id="s">6</span>
+                s
+            </div>
+            <script>
+// Set the date we're counting down to
+var countDownDate = new Date("Oct 5, 2021 09:00:00").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("d").innerHTML = days;
+  document.getElementById("h").innerHTML = hours;
+  document.getElementById("m").innerHTML = minutes;
+  document.getElementById("s").innerHTML = seconds;
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
+            <nav>
+                <li class="active"><a href="">Schedule</a></li>
+                <li><a href="https://gabrieladarza.github.io/CodeConnect2021-trial-2/speakers/">Speakers</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/sponsors">Sponsors</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/faqs">FAQ</a></li>
+                <li><a href="https://code.vmware.com/join">Join</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/hackathon">Hackathon</a></li>
+            </nav>
+        </header>
+
