--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,11 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
-* {
-    padding: 0;
-    margin: 0;
-}
-*, *:before, *:after {
-    box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="asset/style.css">
+    </head>
 body {
     background: #000;
     color: white;
