--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="asset/style.css">
+        <link rel="stylesheet" href="sponsors/style.css">
     </head>
     <body>
         <header>
