--- a/faqs/index.html
+++ b/faqs/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <link rel="stylesheet" href="asset/style.css">
+        <link rel="stylesheet" href="faqs/style.css">
     </head>
     <body>
         <header>
-            <img class="logo" src="asset/GitHub-Universe-logo-2020-white.svg">
+            <img class="logo" src="faqs/GitHub-Universe-logo-2020-white.svg">
             <div class="time">December 8 - 10</div>
             <div class="countdown-time">
                 <span class="d">22</span>
