--- a/faqs/index.html
+++ b/faqs/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" style= .../asset/style.css">
+        <link rel="stylesheet" style= .../faqs/style.css">
     </head>
     <body>
         <header>
