--- a/faqs/index.html
+++ b/faqs/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="faqs/GitHub-Universe-logo-2020-white.svg">
+            <img class="logo" src="faqs/vmw-code-logo_wht.png">
             <div class="time">December 8 - 10</div>
             <div class="countdown-time">
                 <span class="d">22</span>
