--- a/faqs/index.html
+++ b/faqs/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" href="vmw-code-logo_wht.png">
+            <img class="logo" src="whitecode.png">
             <div class="time">December 8 - 10</div>
             <div class="countdown-time">
                 <span class="d">22</span>
