--- a/faqs/index.html
+++ b/faqs/index.html
@@ -224,7 +224,7 @@ Copyright (c) 2020 Max Base -->
                 </li>
             </ul>
             <a href="">
-                <img class="logo" src="asset/GitHub-invertocat.svg">
+                <img class="logo" src="logowhite.png">
             </a>
             <p class="copyright">© 2020 GitHub. All rights reserved.</p>
         </footer>
