--- a/faqs/index.html
+++ b/faqs/index.html
@@ -226,7 +226,7 @@ Copyright (c) 2020 Max Base -->
             <a href="">
                 <img class="logo" src="logowhite.png">
             </a>
-            <p class="copyright">© 2020 GitHub. All rights reserved.</p>
+            <p class="copyright">© 2021 VMware {code}. All rights reserved.</p>
         </footer>
     </body>
 </html>
