--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ var x = setInterval(function() {
 }, 1000);
 </script>
             <nav>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/">Home</a></li>
                 <li class="active"><a href="">Schedule</a></li>
                 <li><a href="https://gabrieladarza.github.io/CodeConnect2021-trial-2/speakers/">Speakers</a></li>
                 <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/sponsors">Sponsors</a></li>
