--- a/faqs/index.html
+++ b/faqs/index.html
@@ -35,8 +35,7 @@ Copyright (c) 2020 Max Base -->
             <div class="container">
                 <h1 class="gradient-text">Frequently asked questions</h1>
                 <p>
-                    You have questions, and we have (some) answers. If you can’t find what you’re looking for, 
-                    <a class="underline" href="">send us a note</a>.
+                    You have questions, and we have (some) answers. 
                 </p>
             </div>
         </section>
@@ -48,87 +47,57 @@ Copyright (c) 2020 Max Base -->
                 <ul class="faq-question">
                     <li>
                         <h2 class="faq-title">
-                            What is GitHub Universe?
+                            What is VMware {code} Connect?? (Code Connect)
                         </h2>
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                GitHub Universe is our annual marquee product and community event featuring GitHub product experts, software leaders, and enterprise teams who are building the world’s most important technologies. It’s a chance for our global interconnected community to come together and share best practices, learn from each other, and hear about GitHub’s newest products and features.
+                                VMware {code} connect is a 2 two, virtual, and 100% live event meant to bring together the VMware {code} community to learn, code, and connect with one another. 
                             </p>
                         </div>
                     </li>
                     <li>
                         <h2 class="faq-title">
-                            Why is Universe virtual this year?
+                            Why is the event virtual this year?
                         </h2>
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                To keep our community safe during the global COVID-19 pandemic. From the very beginning, GitHub has been built on the power of asynchronous and remote collaboration, and we’re applying everything we’ve learned to make Universe an exciting and engaging virtual experience.
+                                To keep our community safe during the global COVID-19 pandemic. After running CodeConnect virtually last year, we’re applying everything we’ve learned to make this year's VMware {code} Connect an exciting and engaging virtual experience.
                             </p>
                         </div>
                     </li>
                     <li>
                         <h2 class="faq-title">
-                            Who should attend GitHub Universe?
+                            Who should attend VMware {code} Connect?
                         </h2>
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                This year sessions are grouped into four channels based on interest/job function: Developer, Enterprise, Univers(ity) and Play.
+                                IT practioner looking to learn more about DevOps? Developer curious to see what VMware has been working on? Student trying to gain more industry knowledge? First timer coder? All are welcome at our conference! Code Connect is meant to be an experience where anyone at any level can participate and still walk away having learnt something new. And best of all- it's FREE!
                             </p>
+ 
+                        </div>
+                    </li>
+                    <li>
+                        <h2 class="faq-title">
+                            How can I participate in Code Connect?
+                        </h2>
+                        <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
+                        <div class="faq-content">
                             <p>
-                                Developer: geared towards open source contributors and maintainers running projects of all sizes, as well as developers looking to understand the latest software tools, techniques, and best practices.
-                            </p>
-                            <p>
-                                Enterprise: tailored for senior leaders and decision-makers from global companies interested in transformation, security, scalability, and productivity.
-                                Univers(ity): designed specifically for college students seeking the tools, techniques, and connections that will help expand their resumes and prepare them for their future.
-                                Play: take a break, get inspired, or discover something new with entertaining performances, tutorials, and unexpected stories, all driven by code.
-                                And Universe is flexible - you can focus on one channel, or decide to pick-and-choose sessions that are most interesting and relevant to you across the program. All talks will require basic software understanding, there will not be entry-level sessions.
+                                Register on our website and check out the course catalog on https://www.vmworld.com/en/index.html to learn more about this year's keynotes and sessions. Choose the right track and sessions for you, from beginner to intermediate. Apply your new skills by signing up for the Hackathon and creating a team with your friends or request to be added to a random group to mingle with the community! 
                             </p>
                         </div>
                     </li>
                     <li>
                         <h2 class="faq-title">
-                            How can I participate in Universe 2020?
+                            Will all sessions be live?
                         </h2>
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                Tune in starting on December 8 right here at githubuniverse.com and:
-                            </p>
-                            <p>
-                                Watch GitHub CEO Nat Friedman’s opening keynote
-                                Join breakout sessions in any of our four channels
-                                Join the conversation and ask questions on GitHub Discussions
-                                Download additional resources provided by speakers
-                                Enjoy live creative coding performances and tutorials on the Play channel
-                                Design your own Octocat
-                                uy some cool Universe swag (and support great causes)
-                                Network and connect at an Orbital event around Universe
-                                Check out our sponsor demos
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h2 class="faq-title">
-                            Why are there two broadcasts?
-                        </h2>
-                        <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
-                        <div class="faq-content">
-                            <p>
-                                To support viewers across the globe, we’re offering two broadcasts. Broadcast 1 will start on December 8 at 17:00 GMT (09:00 PST) with generally convenient viewing times for North and South America, Europe, and West Africa. Broadcast 2 will start on December 9 at 04:00 GMT (09:30 IST) and be optimized for viewing in Asia Pacific.
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h2 class="faq-title">
-                            Will both broadcasts be live?
-                        </h2>
-                        <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
-                        <div class="faq-content">
-                            <p>
-                                Broadcast 1 will be primarily live and Broadcast 2 will be hosted by live regional hosts and local performers, but much of the session content will be a replay from Broadcast 1 earlier in the day.
+                                Yes! ALL sessions will be live streamed, however, they will be available for watching on demand later! 
                             </p>
                         </div>
                     </li>
@@ -139,7 +108,7 @@ Copyright (c) 2020 Max Base -->
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                Registration is not be required to watch the livestream or on-demand sessions. We recommend favoriting and/or adding a calendar invite for the keynote and other sessions to make sure you don’t miss out on the live experience. The hands-on Workshops taking place the day before Universe cost $100 for two sessions, require advance registration, and space is limited.
+                                Please register via the "Home" page and vmworld.com
                             </p>
                         </div>
                     </li>
@@ -150,21 +119,11 @@ Copyright (c) 2020 Max Base -->
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                All keynote and breakout sessions are free this year. Workshops require advance registration and cost $100 for two sessions.
+                                All sessions are FREE
                             </p>
                         </div>
                     </li>
-                    <li>
-                        <h2 class="faq-title">
-                            How do I log on?
-                        </h2>
-                        <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
-                        <div class="faq-content">
-                            <p>
-                                To watch any of the live streaming content, simply go githubuniverse.com, at the date and time of the broadcast. Comments and questions will take place on GitHub Discussions, which requires a (free) GitHub account. If you register for workshops, we will provide details about logging in and participating.
-                            </p>
-                        </div>
-                    </li>
+                   
                     <li>
                         <h2 class="faq-title">
                             How will the sessions work?
@@ -172,24 +131,11 @@ Copyright (c) 2020 Max Base -->
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                Session will begin at their scheduled start times in the Developer, Enterprise, Play Channel or in the Univers(ity) portal. Keep the livestream running while you work, or build a personalized agenda by setting individual calendar reminders for the sessions that interest you most. While watching sessions, you’ll be able to join the conversation and ask questions live via GitHub Discussions.
+                                Session will begin at their scheduled start times in their tracks. Keep the livestream running while you work, or build a personalized agenda by setting individual calendar reminders for the sessions that interest you most. While watching sessions, you’ll be able to join the conversation and ask questions live via Zoom chat.
                             </p>
                         </div>
                     </li>
-                    <li>
-                        <h2 class="faq-title">
-                            What is GitHub Discussions?
-                        </h2>
-                        <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
-                        <div class="faq-content">
-                            <p>
-                                GitHub Discussions is a product feature we rolled out at GitHub Satellite. It’s a tool developers are encouraged to use to improve their workflows—and we will be using it for community conversations throughout the event.
-                            </p>
-                            <p>
-                                Discussions live in your project repository, so they’re accessible where your community is already working together. Their threaded format makes it easy to start, respond to, and organize unstructured conversations. Questions can be marked as answered, so over time a community’s knowledge base grows naturally. And because discussions aren’t closed the way issues are, they can easily serve as a place for maintaining FAQs and other collaborative documentation. We recognize that community discussion is as much a part of development as coding, so discussion contributions appear in users’ contribution graphs.
-                            </p>
-                        </div>
-                    </li>
+                    
                     <li>
                         <h2 class="faq-title">
                             What if I miss a session or can’t attend a session
@@ -208,19 +154,7 @@ Copyright (c) 2020 Max Base -->
         <footer>
             <ul class="linear-list">
                 <li>
-                    <a href="">Code of Conduct</a>
-                </li>
-                <li>
-                    <a href="">Terms</a>
-                </li>
-                <li>
-                    <a href="">Privacy</a>
-                </li>
-                <li>
-                    <a href="">Event sponsorship</a>
-                </li>
-                <li>
-                    <a href="">events@github.com</a>
+                    <a href="https://www.vmworld.com/content/dam/digitalmarketing/vmworld/pdf/VMworld-Event-Code-of-Conduct-Policy-June2020.pdf">Code of Conduct</a>
                 </li>
             </ul>
             <a href="">
