--- a/faqs/index.html
+++ b/faqs/index.html
@@ -8,27 +8,60 @@ Copyright (c) 2020 Max Base -->
     <body>
         <header>
             <img class="logo" src="whitecode.png">
-            <div class="time">December 8 - 10</div>
+            <div class="time">October 5-6, 2021</div>
             <div class="countdown-time">
-                <span class="d">22</span>
+                <span id="d">22</span>
                 d
                 ::
-                <span class="h">1</span>
+                <span id="h">1</span>
                 h
                 ::
-                <span class="m">48</span>
+                <span id="m">48</span>
                 m
                 ::
-                <span class="s">6</span>
+                <span id="s">6</span>
                 s
             </div>
+            <script>
+// Set the date we're counting down to
+var countDownDate = new Date("Oct 5, 2021 09:00:00").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("d").innerHTML = days;
+  document.getElementById("h").innerHTML = hours;
+  document.getElementById("m").innerHTML = minutes;
+  document.getElementById("s").innerHTML = seconds;
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
             <nav>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/">Home</a></li>
                 <li class="active"><a href="">Schedule</a></li>
-                <li><a href="">Speakers</a></li>
-                <li><a href="">Experience</a></li>
-                <li><a href="">Sponsors</a></li>
-                <li><a href="">FAQ</a></li>
-                <li><a href="">Subscribe</a></li>
+                <li><a href="https://gabrieladarza.github.io/CodeConnect2021-trial-2/speakers/">Speakers</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/sponsors">Sponsors</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/faqs">FAQ</a></li>
+                <li><a href="https://code.vmware.com/join">Join</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/hackathon">Hackathon</a></li>
             </nav>
         </header>
         <section class="content content-small">
