--- a/faqs/index.html
+++ b/faqs/index.html
@@ -80,7 +80,7 @@ var x = setInterval(function() {
                 <ul class="faq-question">
                     <li>
                         <h2 class="faq-title">
-                            What is VMware {code} Connect?? (Code Connect)
+                            What is VMware {code} Connect? (Code Connect)
                         </h2>
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
