--- a/faqs/index.html
+++ b/faqs/index.html
@@ -56,10 +56,10 @@ var x = setInterval(function() {
 </script>
             <nav>
                 <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/">Home</a></li>
-                <li class="active"><a href="">Schedule</a></li>
+                <li><a href="">Schedule</a></li>
                 <li><a href="https://gabrieladarza.github.io/CodeConnect2021-trial-2/speakers/">Speakers</a></li>
                 <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/sponsors">Sponsors</a></li>
-                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/faqs">FAQ</a></li>
+                <li class="active"><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/faqs">FAQ</a></li>
                 <li><a href="https://code.vmware.com/join">Join</a></li>
                 <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/hackathon">Hackathon</a></li>
             </nav>
@@ -147,7 +147,7 @@ var x = setInterval(function() {
                     </li>
                     <li>
                         <h2 class="faq-title">
-                            What is the cost to attend Universe 2020?
+                            What is the cost to attend Code Connect 2021?
                         </h2>
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
