--- a/faqs/index.html
+++ b/faqs/index.html
@@ -85,7 +85,7 @@ var x = setInterval(function() {
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                VMware {code} connect is a 2 two, virtual, and 100% live event meant to bring together the VMware {code} community to learn, code, and connect with one another. 
+                                VMware {code} connect is a two day, virtual, and 100% live event meant to bring together the VMware {code} community to learn, code, and connect with one another. 
                             </p>
                         </div>
                     </li>
@@ -96,7 +96,7 @@ var x = setInterval(function() {
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                To keep our community safe during the global COVID-19 pandemic. After running CodeConnect virtually last year, we’re applying everything we’ve learned to make this year's VMware {code} Connect an exciting and engaging virtual experience.
+                                To keep our community safe during the global COVID-19 pandemic. After running Code Connect virtually last year, we’re applying everything we’ve learned to make this year's VMware {code} Connect an exciting and engaging virtual experience.
                             </p>
                         </div>
                     </li>
@@ -107,7 +107,7 @@ var x = setInterval(function() {
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                IT practioner looking to learn more about DevOps? Developer curious to see what VMware has been working on? Student trying to gain more industry knowledge? First timer coder? All are welcome at our conference! Code Connect is meant to be an experience where anyone at any level can participate and still walk away having learnt something new. And best of all- it's FREE!
+                                IT practioner looking to learn more about DevOps? Developer curious to see what VMware has been working on? Student trying to gain more industry knowledge? First time coder? All are welcome at our conference! Code Connect is meant to be an experience where anyone at any level can participate and still walk away having learnt something new. And best of all- it's FREE!
                             </p>
  
                         </div>
@@ -119,7 +119,7 @@ var x = setInterval(function() {
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                Register on our website and check out the course catalog on https://www.vmworld.com/en/index.html to learn more about this year's keynotes and sessions. Choose the right track and sessions for you, from beginner to intermediate. Apply your new skills by signing up for the Hackathon and creating a team with your friends or request to be added to a random group to mingle with the community! 
+                                Register on our website and check out the course catalog on <a href=https://www.vmworld.com/en/index.html>https://www.vmworld.com/en/index.html</a> to learn more about this year's keynotes and sessions. Choose the right track and sessions for you, from beginner to intermediate. Apply your new skills by signing up for the Hackathon and creating a team with your friends or request to be added to a random group to mingle with the community! 
                             </p>
                         </div>
                     </li>
@@ -164,7 +164,7 @@ var x = setInterval(function() {
                         <svg height="24" viewBox="0 0 24 24" version="1.1" width="24" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 8.72a.75.75 0 000 1.06l6.25 6.25a.75.75 0 001.06 0l6.25-6.25a.75.75 0 00-1.06-1.06L12 14.44 6.28 8.72a.75.75 0 00-1.06 0z"></path></svg>
                         <div class="faq-content">
                             <p>
-                                Session will begin at their scheduled start times in their tracks. Keep the livestream running while you work, or build a personalized agenda by setting individual calendar reminders for the sessions that interest you most. While watching sessions, you’ll be able to join the conversation and ask questions live via Zoom chat.
+                                Sessions will begin at their scheduled start times in their tracks. Keep the livestream running while you work, or build a personalized agenda by setting individual calendar reminders for the sessions that interest you most. While watching sessions, you’ll be able to join the conversation and ask questions live via Zoom chat.
                             </p>
                         </div>
                     </li>
