--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
+<!-- MIT License
+
+Copyright (c) 2020 Max Base -->
 <html>
     <head>
-        <link rel="stylesheet" href="sponsors/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <img class="logo" src="asset/vmw-code-logo_wht.png">
+            <img class="logo" src="whitecode.png">
             <div class="time">October 5-6, 2021</div>
             <div class="countdown-time">
                 <span id="d">22</span>
@@ -53,12 +55,22 @@ var x = setInterval(function() {
 }, 1000);
 </script>
             <nav>
-                <li class="active"><a href="">Schedule</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/">Home</a></li>
+                <li><a href="">Schedule</a></li>
                 <li><a href="https://gabrieladarza.github.io/CodeConnect2021-trial-2/speakers/">Speakers</a></li>
                 <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/sponsors">Sponsors</a></li>
-                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/faqs">FAQ</a></li>
+                <li class="active"><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/faqs">FAQ</a></li>
                 <li><a href="https://code.vmware.com/join">Join</a></li>
                 <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/hackathon">Hackathon</a></li>
             </nav>
         </header>
-
+        <section class="content content-small">
+            <div class="container">
+                <h1 class="gradient-text">Frequently asked questions</h1>
+                <p>
+                    You have questions, and we have (some) answers. 
+                </p>
+            </div>
+        </section>
+  </body>    
+</html>        
