--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -66,10 +66,7 @@ var x = setInterval(function() {
         </header>
         <section class="content content-small">
             <div class="container">
-                <h1 class="gradient-text">Frequently asked questions</h1>
-                <p>
-                    You have questions, and we have (some) answers. 
-                </p>
+                <h1 class="gradient-text">Sponsors</h1>
             </div>
         </section>
   </body>    
