--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -69,5 +69,19 @@ var x = setInterval(function() {
                 <h1 class="gradient-text">Sponsors</h1>
             </div>
         </section>
-  </body>    
+       <hr>
+        <footer>
+            <ul class="linear-list">
+                <li>
+                    <a href="https://www.vmworld.com/content/dam/digitalmarketing/vmworld/pdf/VMworld-Event-Code-of-Conduct-Policy-June2020.pdf">Code of Conduct</a>
+                </li>
+            </ul>
+            <a href="">
+                <img class="logo" src="logowhite.png">
+            </a>
+            <p class="copyright">© 2021 VMware {code}. All rights reserved.</p>
+        </footer>
+    </body>
+</html>
+    </body>    
 </html>        
