--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -58,8 +58,8 @@ var x = setInterval(function() {
                 <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/">Home</a></li>
                 <li><a href="">Schedule</a></li>
                 <li><a href="https://gabrieladarza.github.io/CodeConnect2021-trial-2/speakers/">Speakers</a></li>
-                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/sponsors">Sponsors</a></li>
-                <li class="active"><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/faqs">FAQ</a></li>
+                <li class="active"><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/sponsors">Sponsors</a></li>
+                <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/faqs">FAQ</a></li>
                 <li><a href="https://code.vmware.com/join">Join</a></li>
                 <li><a href="https://vmwarecodeconnect.github.io/CodeConnect2021/hackathon">Hackathon</a></li>
             </nav>
